ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail186.hs
-- Trac #1814

module ShouldFail where

import Tcfail186_Help

foo = f "hoo"